--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,21 @@
 @import "tailwindcss";
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+   font-family: 'Inter', sans-serif;
+}
+
+.text-primary {
+  color: #000000 !important; 
+}
+
+.text-secondary {
+  color: #7F7F7F !important; 
+}
+
+.text-white {
+  color: #FFFFFF !important; 
+}
+
+.bg-white {
+  background-color: #FFFFFF !important;
 }
