--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@ body {
    font-family: 'Marcellus', 'Work Sans', serif;
 }
 :root {
-  --theme-color: #3AA2CC;
+  --theme-color: #924A00;
 }
 .text-gray-700 {
   color: #000000 !important; 
